--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #MySQL
 spring.datasource.url=jdbc:mysql://localhost/ponto_inteligente?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Aikare66669
+sspring.datasource.username=root
+sspring.datasource.password=Aikare66669
 spring.jpa.hibernate.ddl-auto=none
 
 #exibe os comandos 	SQL
@@ -9,4 +9,16 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
-spring.jpa.properties.hibernate.id.new_generator_mappings=false
+#spring.jpa.properties.hibernate.id.new_generator_mappings=false
+
+# coloquei isso pq eu nao tenho mysql na minha maquina. usei o banco de memoria para gerar o modelo/schema para mim
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# adicionei essas linhas e ela me gerou o schema/modelo do banco de dados usando o hibernate e spring-data
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
