--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #MySQL
 spring.datasource.url=jdbc:mysql://localhost/ponto_inteligente?createDatabaseIfNotExist=true&serverTimezone=UTC
-sspring.datasource.username=root
-sspring.datasource.password=Aikare66669
+spring.datasource.username=root
+spring.datasource.password=Aikare66669
 spring.jpa.hibernate.ddl-auto=none
 
 #exibe os comandos 	SQL
