--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.kazale</groupId>
+	<artifactId>ponto-inteligente</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>PontoInteligente</name>
+	<description>API para o sistema de ponto inteligente
+	</description>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.kazale</groupId>
-	<artifactId>ponto-inteligente</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>PontoInteligente</name>
-	<description>API para o sistema de ponto inteligente</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
