--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
+
+#Desabilita as autnticacoes do hibernate
+security.basic.enabled=false	
