--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.properties.hibernate.id.new_generator_mappings=false
 
 #Desabilita as autnticacoes do hibernate
 security.basic.enabled=false	
+
+#paginacao
+paginacao.qtd_por_pagina=25
