--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,12 @@ spring.jpa.properties.hibernate.type=trace
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 
 #Desabilita as autnticacoes do hibernate
-security.basic.enabled=false	
+
 
 #paginacao
 paginacao.qtd_por_pagina=25
+
+# JWT
+jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
+# token com duracao de 7 dias
+jwt.expiration=604800
