--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=dev
+
 #MySQL
 spring.datasource.url=jdbc:mysql://localhost/ponto_inteligente?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
